Convert fa-comment-o and fa-far-comment

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -157,11 +157,9 @@
   @include material-icons('settings');
 }
 
-.fa-comment {
-  @include material-icons('comment');
-}
-
-.fa-comment-o {
+.fa-comment,
+.fa-comment-o,
+.fa-far-comment {
   @include material-icons('comment');
 }
 
