Convert fa-list-alt

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -288,10 +288,7 @@
   @include material-icons('link');
 }
 
-.fa-list {
-  @include material-icons('list');
-}
-
+.fa-list,
 .fa-list-alt {
   @include material-icons('list');
 }
