Convert fa-shield-alt

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -404,7 +404,8 @@
   @include material-icons('search');
 }
 
-.fa-shield {
+.fa-shield,
+.fa-shield-alt {
   @include material-icons('security');
 }
 
