Convert fa-trash-o and fa-far-trash-alt

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -467,11 +467,9 @@
   @include material-icons('cancel');
 }
 
-.fa-trash {
-  @include material-icons('delete');
-}
-
-.fa-trash-o {
+.fa-trash,
+.fa-trash-o,
+.fa-far-trash-alt {
   @include material-icons('delete');
 }
 
