Convert fa-unlock-alt

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -477,10 +477,7 @@
   @include material-icons('undo');
 }
 
-.fa-unlock {
-  @include material-icons('lock_open');
-}
-
+.fa-unlock,
 .fa-unlock-alt {
   @include material-icons('lock_open');
 }
