Fix a typo in material-icons.scss

--- a/scss/common/_material-icons.scss
+++ b/scss/common/_material-icons.scss
@@ -112,7 +112,7 @@
 }
 
 .fa-chevron-up {
-  @include material-icons('keyboard_arrow_up')
+  @include material-icons('keyboard_arrow_up');
 }
 
 .fa-circle {
