--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -182,6 +182,10 @@ section {
       transform: none;
     }
 
+    .reply {
+      position: relative;
+    }
+
     .row {
       padding-bottom: 0;
 
