--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -315,7 +315,7 @@ $header-box-shadow:         $shadow-4dp !default;
 $header-height:             56px !default;
 $header-item-overlay-dark:  $white-divider !default;
 $header-item-overlay-light: $black-divider !default;
-$header-inner-spacer-x:     $spacer-x-inline !default;
+$header-inner-spacer-x:     $spacer-sm !default;
 $header-padding-x:          $spacer-sm !default;
 $header-padding-y:          $spacer-sm !default;
 
