--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -1,29 +1,9 @@
-.algolia-enabled {
-  .d-header-icons .algolia-holder {
-    padding: 0;
-
-    form {
-      margin-bottom: 0;
-    }
-  }
-}
-
 .d-header {
   box-shadow: $header-box-shadow;
   height: auto;
   margin-bottom: $spacer-y;
   min-height: $header-height;
   padding: $header-padding-y 0;
-
-  .docked & {
-    margin-bottom: 0;
-  }
-
-  .extra-info {
-    h1 {
-      margin: 0;
-    }
-  }
 
   .header-buttons {
     margin-top: 0;
@@ -32,45 +12,40 @@
       @include btn-raised-reverse;
 
       color: unquote('$header-primary');
-      margin-left: $header-inner-spacer-x;
+      margin-right: $header-inner-spacer-x;
       padding: $btn-padding-y-sm $btn-padding-x-sm;
 
-      &:hover,
-      &.btn-hover {
+      &:hover {
         .discourse-no-touch & {
           background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
         }
+      }
+
+      &.login-button {
+        margin-left: 0;
       }
     }
   }
 
   #site-logo {
-    max-height: ($header-height - $header-padding-y * 3);
+    height: auto;
+    max-height: ($header-height - $header-padding-y * 2);
   }
 
   .title {
     margin-right: $header-inner-spacer-x;
-
-    a {
-      align-items: center;
-      display: flex;
-    }
-
-    h1 {
-      color: inherit;
-    }
-  }
-
-  .topic-header-extra {
-    margin-left: $header-inner-spacer-x;
-
-    .discourse-tags {
-      @include typography-caption;
-    }
   }
 }
 
 .d-header-icons {
+  align-items: center;
+  display: flex;
+  margin: 0;
+
+  > li:not(:last-child) {
+    margin-right: $header-inner-spacer-x;
+  }
+
   .badge-notification {
     min-width: ($font-size-base * $line-height-base);
   }
@@ -84,7 +59,6 @@
     border-radius: 50%;
     color: inherit;
     height: ($header-height - $header-padding-y * 2);
-    margin-left: $header-inner-spacer-x;
     padding: 0;
     transition: background-color $transition-duration $transition-timing-function;
     width: ($header-height - $header-padding-y * 2);
@@ -110,45 +84,31 @@
     }
   }
 
-  .active .icon {
-    .drop-down-mode &,
-    .drop-down-visible & {
-      background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
-      border: 0;
-      color: inherit;
-
-      &::after {
-        display: none;
-      }
-    }
-  }
-
   .ring {
     margin-right: 1px;
     top: ($chip-padding-y / -2) !important;
   }
 }
 
-.extra-info {
-  &,
-  &.two-rows {
-    h1 {
-      @include typography-h4;
+.drop-down-mode,
+.drop-down-visible {
+  .d-header-icons .active .icon {
+    background-color: color-chooser($header-item-overlay-dark, $header-item-overlay-light);
+    border: 0;
+    color: inherit;
 
-      margin: 0;
-      min-width: 0;
-      width: auto;
+    &::after {
+      display: none;
     }
   }
 }
 
 .extra-info-wrapper {
-  margin-left: $header-inner-spacer-x;
+  line-height: 1;
   padding: 0;
 
   .badge-wrapper {
-    margin-right: 0;
-    margin-left: $header-inner-spacer-x;
+    margin-right: $header-inner-spacer-x;
 
     @include focus-hover {
       box-shadow: inset 0 0 1px currentColor;
@@ -157,6 +117,19 @@
     &.bullet {
       margin-top: 0;
     }
+  }
+
+  .header-title {
+    @include typography-h4;
+
+    margin: 0 $header-inner-spacer-x 0 0;
+    min-width: 1px;
+  }
+
+  .topic-header-extra .discourse-tags {
+    @include typography-caption;
+
+    margin-right: $header-inner-spacer-x - $spacer-x-inline;
   }
 }
 
