--- a/scss/common.scss
+++ b/scss/common.scss
@@ -73,6 +73,7 @@
 @import 'common/reply';
 @import 'common/search';
 @import 'common/share';
+@import 'common/spinner';
 @import 'common/table';
 @import 'common/timeline';
 @import 'common/topic-list';
